<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView

            android:paddingStart="11dp"
            android:layout_marginStart="20dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/arrow_back"
            android:padding="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>


    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imgPro"
            android:src="@drawable/ic_profile"
            android:layout_gravity="center"
            android:layout_width="70dp"
            android:layout_height="70dp"/>
        <TextView

            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_name"/>


    </LinearLayout>

    <LinearLayout
        android:background="@drawable/round_back"
        android:padding="15dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--        Dark and Light mode    -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView

                android:layout_centerVertical="true"
                android:id="@+id/ic_darkmode"
                android:padding="11dp"
                android:src="@drawable/ic_night_mode"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/round_back_night_mode"
                />

            <TextView
                android:textSize="14sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@color/white"
                android:text="@string/dark_mode"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/ic_darkmode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.SwitchCompat
                android:switchMinWidth="50dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </androidx.appcompat.widget.SwitchCompat>


        </RelativeLayout>

        <!--        Notification    -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_centerVertical="true"
                android:id="@+id/notification_id"
                android:padding="9dp"
                android:src="@drawable/ic_notification"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/round_back_notification"
                />

            <TextView
                android:textSize="14sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@color/white"
                android:text="@string/notification"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/notification_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.SwitchCompat
                android:switchMinWidth="50dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </androidx.appcompat.widget.SwitchCompat>


        </RelativeLayout>


    </LinearLayout>
    <LinearLayout

        android:background="@drawable/round_back"
        android:padding="15dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="360dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_centerVertical="true"
                android:id="@+id/language_id"
                android:padding="9dp"
                android:src="@drawable/ic_language"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/round_back_language"
                />

            <TextView
                android:textSize="14sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@color/white"
                android:text="@string/language"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/language_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:src="@drawable/ic_arrow_right"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView

                android:layout_centerVertical="true"
                android:id="@+id/about_us_id"
                android:padding="9dp"
                android:src="@drawable/about_us"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/round_back_about_us"
                />

            <TextView
                android:textSize="14sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@color/white"
                android:text="@string/about_us"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/about_us_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:src="@drawable/ic_arrow_right"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </RelativeLayout>




    </LinearLayout>


</RelativeLayout>